[gd_scene load_steps=16 format=3 uid="uid://dmvl0uuhhsg8r"]

[ext_resource type="Script" path="res://Flashcards/CreateFlashcardInterface.gd" id="1_7scd4"]
[ext_resource type="FontFile" uid="uid://bv5k012hvoy82" path="res://Assets/Fonts/Roboto-Regular.ttf" id="2_d1sd6"]
[ext_resource type="Script" path="res://Flashcards/Test.gd" id="3_b0v0a"]
[ext_resource type="Texture2D" uid="uid://cfpp6wdi5q5k5" path="res://Assets/Icons/paperclip.png" id="3_ipm32"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3w8a"]
bg_color = Color(0.673809, 0.87871, 0.509016, 1)
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2(2.35, 5.635)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5mov"]
bg_color = Color(0.83, 0.83, 0.83, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(4.685, 7.265)
anti_aliasing = false

[sub_resource type="CanvasTexture" id="CanvasTexture_mxgpa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gus8j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1jto"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcwrl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e81pp"]
bg_color = Color(0.24807, 0.694112, 0.499273, 1)
border_width_left = 150
border_width_right = 150
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amo3y"]
bg_color = Color(0.24807, 0.694112, 0.499273, 1)
border_width_left = 155
border_width_top = 2
border_width_right = 155
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0svci"]
bg_color = Color(0.24807, 0.694112, 0.499273, 1)
border_width_left = 155
border_width_top = 2
border_width_right = 155
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lldi3"]
bg_color = Color(0.24807, 0.694112, 0.499273, 1)
border_width_left = 150
border_width_right = 150
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n88c7"]
bg_color = Color(0.807843, 0.807843, 0.807843, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="CreateFlashcardInterface" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7scd4")

[node name="Toast" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -129.5
offset_top = 250.0
offset_right = 129.5
offset_bottom = 328.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g3w8a")

[node name="Label" type="Label" parent="Toast"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_font_sizes/font_size = 30
text = "Karte hinzugefügt"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -335.5
offset_right = 342.0
offset_bottom = 335.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e5mov")

[node name="Caret" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 27.0
offset_top = 62.5
offset_right = 29.0
offset_bottom = 87.5
scale = Vector2(0.64, 0.6)
texture = SubResource("CanvasTexture_mxgpa")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="QuestionTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_font_sizes/font_size = 30
text = "Vorderseite"
horizontal_alignment = 1

[node name="Question" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.815686, 0.678431, 0.654902, 1)
theme_override_colors/font_color = Color(0.136826, 0.136826, 0.136826, 1)
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_font_sizes/font_size = 25
placeholder_text = "Frage..."

[node name="Panel" type="Panel" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gus8j")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_b0v0a")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer/MarginContainer/MarginContainer"]
visible = false
layout_mode = 2
focus_mode = 2
mouse_filter = 1
theme_override_constants/line_separation = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_q1jto")
bbcode_enabled = true
text = "Test"
selection_enabled = true

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer/MarginContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 1
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_selected_color = Color(0, 0, 0, 0.141176)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 0)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/selection_color = Color(0, 0, 0, 0)
theme_override_colors/current_line_color = Color(0, 0, 0, 0)
theme_override_colors/caret_color = Color(0, 0, 0, 0)
theme_override_colors/caret_background_color = Color(0, 0, 0, 0)
theme_override_colors/word_highlighted_color = Color(0, 0, 0, 0)
theme_override_colors/search_result_color = Color(0, 0, 0, 0)
theme_override_colors/search_result_border_color = Color(0, 0, 0, 0)
theme_override_styles/normal = SubResource("StyleBoxFlat_dcwrl")
text = "Testttest"

[node name="Answer2" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_d1sd6")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Make Bold"

[node name="AnswerTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_font_sizes/font_size = 30
text = "Rückseite"
horizontal_alignment = 1

[node name="Answer" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.815686, 0.678431, 0.654902, 1)
theme_override_colors/font_color = Color(0.136826, 0.136826, 0.136826, 1)
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_font_sizes/font_size = 25
placeholder_text = "Antwort..."

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("3_ipm32")
flat = true

[node name="NativeFileDialog" type="NativeFileDialog" parent="Panel/MarginContainer/VBoxContainer/Button"]
title = "Open File(s)"
file_mode = 1
filters = PackedStringArray(".png")

[node name="Btn_AddCard" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_styles/normal = SubResource("StyleBoxFlat_e81pp")
theme_override_styles/hover = SubResource("StyleBoxFlat_amo3y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0svci")
text = "Hinzufügen"

[node name="Btn_EditCard" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_styles/normal = SubResource("StyleBoxFlat_lldi3")
theme_override_styles/hover = SubResource("StyleBoxFlat_amo3y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amo3y")
text = "Speichern"

[node name="StatusText" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.996946, 3.39322e-06, 1.92523e-07, 1)
theme_override_fonts/normal_font = ExtResource("2_d1sd6")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Frage existiert bereits"
fit_content = true

[node name="BtnClose" type="Button" parent="."]
custom_minimum_size = Vector2(55.24, 0)
layout_mode = 0
offset_left = 259.0
offset_top = -384.0
offset_right = 314.24
offset_bottom = -342.0
theme_override_colors/font_color = Color(0.0562916, 0.0562916, 0.0562916, 1)
theme_override_fonts/font = ExtResource("2_d1sd6")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_n88c7")
theme_override_styles/hover = SubResource("StyleBoxFlat_n88c7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n88c7")
text = "x"

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/Question" to="." method="_on_question_text_changed"]
[connection signal="caret_changed" from="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer/MarginContainer/TextEdit" to="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer" method="_on_text_edit_caret_changed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer/MarginContainer/TextEdit" to="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/Button" to="Panel/MarginContainer/VBoxContainer/Panel/VBoxContainer/MarginContainer" method="_on_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Btn_AddCard" to="." method="_on_btn_add_card_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Btn_EditCard" to="." method="_On_BtnEditCard_Pressed"]
[connection signal="pressed" from="BtnClose" to="." method="_on_btn_close_pressed"]
